# web-search-mcp

./: .dockerignore  .hadolint.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
src/: error.rs  lib.rs
src/mcp/: handler.rs  mod.rs
src/tools/: mod.rs  web_search.rs
