[package]
name = "web-search-mcp"
version = "0.1.0"
edition = "2024"
authors = ["EratoLab"]
description = "A Model Context Protocol (MCP) server for web search using Azure AI Search"
license = "MIT"
repository = "https://github.com/EratoLab/web-search-mcp"
readme = "README.md"
keywords = ["web", "search", "mcp", "azure", "ai-search"]
categories = ["web-programming", "api-bindings"]

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"
required-features = ["mcp-server"]

[features]
default = ["mcp-handler"]
mcp-handler = ["rmcp/macros", "rmcp/server"]
mcp-server = [
    "mcp-handler",
    "rmcp/transport-io",
    "rmcp/transport-sse-server",
    "rmcp/transport-streamable-http-server",
    "tokio",
    "clap",
    "axum",
    "tokio-util",
    "env_logger",
]

[dependencies]
rmcp = "0.8"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "signal",
], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }
log = "0.4"
env_logger = { version = "0.11", optional = true }
